--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -100,13 +100,13 @@
                                     <div class="menutext">
                                         @Html.ActionLink("Tools & Machines", "IndexProducts", "Products")
                                         <ul class="hidden">
-                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Tools & Machines", "IndexProducts", "Products")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Stock", "IndexProducts", "Products")</div></li>
                                             <li class="menuli"><div class="submenua">@Html.ActionLink("Stock Adjustment", "IndexProductAdjust", "ProductAdjust")</div></li>
                                         </ul>
                                     </div>
                                 </div>
                             </li>
-                            <li id="mnBDC" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Break Down Cost", "IndexBDC", "BDC")</div></div></li>
+                            <li id="mnBDC" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("BreakDown Cost", "IndexBDC", "BDC")</div></div></li>
                             <li id="imgPayment" class="menuli">
                                 <div class="menua">
                                     <div class="menutext">
