--- a/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarManPower/IndexCMP.cshtml
@@ -194,11 +194,14 @@
         <tr>
             <th class="Rowpointer">No.</th>
             <th class="hidecolumn Rowpointer">ID</th>
+            <th class="Rowpointer">Name</th>
+            <th class="Rowpointer">Position</th>
+            <th class="Rowpointer">Type</th>
             <th class="Rowpointer">JobNo</th>
-            <th class="Rowpointer">TypeWorkingName</th>
+            <th class="Rowpointer">Type of Working</th>
             <th class="Rowpointer">JobDate</th>
-            <th class="Rowpointer">SWorking</th>
-            <th class="Rowpointer">EWorking</th>
+            <th class="Rowpointer">Start Working</th>
+            <th class="Rowpointer">End Working</th>
             <th></th>
         </tr>
     </thead>
