--- a/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
@@ -83,13 +83,13 @@
                 </li>
                 
                 <li>
-                    <label class="label-2" style="margin-right: 42%;">ยี่ห้อ<span class="required">*</span></label>&nbsp;<label class="label-2">ขนาด<span class="required">*</span></label>
+                    <label class="label-2" style="margin-right: 42%;">ยี่ห้อ</label>&nbsp;<label class="label-2">ขนาด</label>
                 </li>
                 <li>
-                    <input type="text" id="txtBrand" name="field1" class="field-divided" placeholder="" disabled/>&nbsp;<input type="text" id="txtSize" name="field2" class="field-select-small" placeholder="" disabled/>
+                    <input type="text" id="txtBrand" name="field1" class="field-divided" placeholder="" disabled/>&nbsp;<input type="text" id="txtSize" name="field2" class="field-select-small text-size160" placeholder="" disabled/>
                 </li>
                 <li>
-                    <label class="label-2" style="margin-right: 45%;">รุ่น<span class="required">*</span></label>&nbsp;<label class="label-2">DocRef</label>
+                    <label class="label-2" style="margin-right: 45%;">รุ่น</label>&nbsp;<label class="label-2">DocRef</label>
                 </li>
                 <li>
                     <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="" disabled/>&nbsp;<input type="text" id="txtDocRef" name="field2" class="field-select-small" placeholder="" />
@@ -97,7 +97,7 @@
                 
                 <li>
                     @*<label class="label-small">ยกมา<span class="required">*</span></label>&nbsp;*@
-                    <label class="label-small-3 float-none">คงเหลือ<span class="required">*</span></label>
+                    <label class="label-small-3 float-none">คงเหลือ</label>
                 </li>
                 <li>
                     @*<input type="number" id="txtBalance" name="field1" class="field-select-small" placeholder="" onblur="GetRemain()" required />&nbsp;*@
