--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -35,19 +35,19 @@
                     <select id="cmbProductType" name="cmbProductType" class="field-divided"></select>
                 </li>
                 <li>
-                    <label class="label-2" style="margin-right: 42%;">ยี่ห้อ<span class="required">*</span></label>&nbsp;<label class="label-2">ขนาด<span class="required">*</span></label>
+                    <label class="label-2" style="margin-right: 42%;">ยี่ห้อ</label>&nbsp;<label class="label-2">ขนาด</label>
                 </li>
                 <li>
-                    <input type="text" id="txtBrand" name="field1" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtSize" name="field2" class="field-select-small"  />
+                    <input type="text" id="txtBrand" name="field1" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtSize" name="field2" class="field-select-small text-size160"  />
                 </li>
                 <li>
-                    <label class="label-2" style="margin-right: 45%;">รุ่น<span class="required">*</span></label>&nbsp;<label class="label-2">อายุใช้งาน</label>
+                    <label class="label-2" style="margin-right: 45%;">รุ่น</label>&nbsp;<label class="label-2">อายุใช้งาน</label>
                 </li>
                 <li>
                     <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small"  />&nbsp;<label class="label-3">ปี</label>
                 </li>
                 <li>
-                    <label class="label-big">รับเข้า<span class="required">*</span></label>&nbsp;<label class="label-small">หน่วยนับ</label>
+                    <label class="label-big">รับเข้า&nbsp;<label class="label-small">หน่วยนับ</label>
                 </li>
                 <li>
                     <input type="text" id="dtReceiveDate" class="field-divided"  required/>&nbsp;<select id="cmbUnitWeight" name="cmbUnitWeight" class="field-select-small-2"></select>
