--- a/Alpha/AlphaMvc/Views/ProductAdjust/EditProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/EditProductAdjust.cshtml
@@ -22,7 +22,7 @@
         <div class="modal-content-Quo">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Product</h4>
+                <h4 class="modal-title">Stock</h4>
             </div>
             <div class="modal-body">
                 <div class="table-overflow">
