--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -5966,32 +5966,32 @@ body.modal-open,
 #tblWageTechnician tr td:nth-child(1){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*ID (visible)*/
 #tblWageTechnician tr td:nth-child(2){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*(วันที่รับเข้า)*/
 #tblWageTechnician tr td:nth-child(3){
     /*width:30%;*/
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*collum4(Code)*/
 #tblWageTechnician tr td:nth-child(4){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*collum5(หมายเลขเครื่อง)*/
 #tblWageTechnician tr td:nth-child(5){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*รายละเอียด*/
 #tblWageTechnician tr td:nth-child(6){
@@ -6009,19 +6009,19 @@ body.modal-open,
 #tblWageTechnician tr td:nth-child(8){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*ขนาด*/
 #tblWageTechnician tr td:nth-child(9){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*คงเหลือ*/
 #tblWageTechnician tr td:nth-child(10){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*หน่วยนับ*/
 #tblWageTechnician tr td:nth-child(11){
@@ -6033,56 +6033,56 @@ body.modal-open,
 #tblWageTechnician tr td:nth-child(12){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*collum1(No)*/
 #tblWageTechnician tr td:nth-child(13){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 
 /*button Add Delete View*/
 #tblWageTechnician tr td:nth-child(14){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*button Add Delete View*/
 #tblWageTechnician tr td:nth-child(15){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*button Add Delete View*/
 #tblWageTechnician tr td:nth-child(16){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*button Add Delete View*/
 #tblWageTechnician tr td:nth-child(17){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*button Add Delete View*/
 #tblWageTechnician tr td:nth-child(18){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*button Add Delete View*/
 #tblWageTechnician tr td:nth-child(19){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 /*button Add Delete View*/
 #tblWageTechnician tr td:nth-child(20){
     width: 5%;
     padding: 5px;
-    text-align:center;
+    /*text-align:center;*/
 }
 
 /*Style Pageing*/
