--- a/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
@@ -15,11 +15,11 @@
     <thead class="bgthead">
         <tr>
             <th>No.</th>
-            <th class="Rowpointer">Emp ID</th>
-            <th class="hideANDseek Rowpointer">HR Code</th>
+            <th class="Rowpointer">TechnicianID</th>
+            <th class="hideANDseek Rowpointer">HRID</th>
             <th class="Rowpointer">FullName</th>
-            <th class="hideANDseek Rowpointer">Type</th>
             <th class="Rowpointer">Position</th>
+            <th class="hideANDseek Rowpointer">Type</th>
             @*<th class="hideANDseek Rowpointer">Grade</th>*@
             <th></th>
         </tr>
