--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -229,7 +229,7 @@
                                                             </tr>
                                                             <tr>
                                                                 <td colspan="6" class="ftDiscount textalign">Discount</td>
-                                                                <td colspan="3"><input id="txtDiscount" type="text" value="" class="text-size168 textright Number" onchange="CalSum()" /></td>
+                                                                <td colspan="3"><input id="txtDiscount" type="text" value="" class="text-size168 textright" onchange="CalSum()" /></td>
                                                             </tr>
                                                             <tr>
                                                                 <td colspan="6" class="ftSubTotal textalign">Sub Total</td>
@@ -251,16 +251,16 @@
                                                                     <select id="cmbIncomeType" class="Select1"></select>
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright">
+                                                                    <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright" />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtQty" class="Quantity text-size80 textright" placeholder="0" onchange="CalSum()" />
+                                                                    <input type="text" id="txtQty" class="Quantity text-size80 textright" onchange="CalSum()" />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtUnitPrice" class="Price text-size130 textright" placeholder="0" onchange="CalSum()" />
+                                                                    <input type="text" id="txtUnitPrice" class="Price text-size130 textright" onchange="CalSum()" />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow">
+                                                                    <input type="text" id="txtAmount" disabled class="Amount Number text-size165 txtdisablerow" />
                                                                 </td>
 
                                                                 <td>
