--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -193,7 +193,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td colspan="6" class="ftDiscount textalign">Discount</td>
-                                                        <td colspan="3"><input id="txtDiscount" type="text" value="" class="Number text-size168 textright" onchange="CalSum()" /></td>
+                                                        <td colspan="3"><input id="txtDiscount" type="text" value="" class="text-size168 textright" onchange="CalSum()" /></td>
                                                     </tr>
                                                     <tr>
                                                         <td colspan="6" class="ftSubTotal textalign">Sub Total</td>
