--- a/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
@@ -17,7 +17,7 @@
             <th>No.</th>
             <th class="Rowpointer">TechnicianID</th>
             <th class="hideANDseek Rowpointer">HRID</th>
-            <th class="Rowpointer">FullName</th>
+            <th class="Rowpointer">Name</th>
             <th class="Rowpointer">Position</th>
             <th class="hideANDseek Rowpointer">Type</th>
             @*<th class="hideANDseek Rowpointer">Grade</th>*@
