--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -148,7 +148,7 @@
                     <div id="container">
                         <div id="parentHorizontalTab">
                             <ul class="resp-tabs-list hor_1">
-                                <li>Expense</li>
+                                <li>Income / Expense</li>
                                 <li>ManPower</li>
                                 <li>Borrow</li>
                                 <li>Sale Order</li>
