--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
                                     <div class="menutext">
                                         @Html.ActionLink("Report", "IndexReportBreakDownCost", "ReportBreakdownCost")
                                         <ul class="hidden">
-                                            @*<li class="menuli"><div class="submenua">@Html.ActionLink("BreakDown Cost", "IndexReportBreakDownCost", "ReportBreakdownCost")</div></li>*@
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("BreakDown Cost", "IndexReportBreakDownCost", "ReportBreakdownCost")</div></li>
                                             <li class="menuli"><div class="submenua">@Html.ActionLink("JobOrder", "IndexReportJobOrder", "ReportJobOrder")</div></li>
                                             <li class="menuli"><div class="submenua">@Html.ActionLink("Borrow & Return", "IndexRptBorrow", "ReportBorrow")</div></li>
                                         </ul>
